[gd_scene load_steps=4 format=3 uid="uid://cpointn5wulhi"]

[ext_resource type="Script" path="res://Scripts/Proyectil.gd" id="1_e1xrh"]
[ext_resource type="Texture2D" uid="uid://chxihx6yvdood" path="res://Sprites/Gota.png" id="2_g1wjc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_04ij6"]

[node name="Proyectil" type="Area2D"]
collision_layer = 8
collision_mask = 3
monitorable = false
script = ExtResource("1_e1xrh")

[node name="Coli" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_04ij6")
metadata/_edit_lock_ = true

[node name="Img" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.784314)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_g1wjc")
metadata/_edit_lock_ = true

[node name="RayMuro" type="RayCast2D" parent="."]
exclude_parent = false
target_position = Vector2(12, 0)
metadata/_edit_lock_ = true

[node name="Fin" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Fin" to="." method="_on_fin_timeout"]
